--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -1,4 +1,3 @@
-
 <div class="h-2/4">
   <p class="text-xl mt-1 mb-4">Ultimos envios de menú </p>
   <div class="grid justify-items-stretch grid-cols-6 2xl:grid-cols-12 gap-1 text-xs">
@@ -17,29 +16,27 @@
   <p class="text-xl mb-2">Sincronizaciones con Maxpoint</p>
   <div style="height: 72%;" class="overflow-auto">
     @if (showLoading) {
-      <div class="w-full h-full flex justify-center items-center">
-        <div class="loader"></div>
-      </div>
+    <div class="w-full h-full flex justify-center items-center">
+      <div class="loader"></div>
+    </div>
     } @else {
-      <!-- <div *ngIf='data | async; else loading'> -->
-      <div class="grid justify-items-stretch grid-cols-6 2xl:grid-cols-12 gap-1 text-xs">
-        <div *ngFor="let menuItem of data" class="shadow-2xl">
-          <div [class]="menuItem.status" class="cursor-pointer"
-               (click)="openMenuDetail(menuItem.syncros_id)">
-            <p><b>ID: </b>{{menuItem.syncros_id}}</p>
-            <p><b>Estado: </b>{{menuItem.status}}</p>
-            <p><b>Tiempo Inicial: </b> {{menuItem.start_time | date: 'd/M/yy, h:mm:ssa':'GMT'}}</p>
-            <p><b>Tiempo Final: </b>{{menuItem.end_time | date: 'd/M/yy, h:mm:ssa':'GMT'}}</p>
-            <p><b>Tiempo Transcurrido: </b>{{menuItem.tt}}</p>
-            <p><b>Tipo de Ejecucion: </b>{{menuItem.mode}}</p>
-            <p><b>Porcentaje: </b><p-progressBar [value]="menuItem.percentage.replace('%','')" />
-            </p>
-
-          </div>
+    <!-- <div *ngIf='data | async; else loading'> -->
+    <div class="grid justify-items-stretch grid-cols-6 2xl:grid-cols-12 gap-1 text-xs">
+      <div *ngFor="let menuItem of data" class="shadow-2xl">
+        <div [class]="menuItem.status" class="cursor-pointer" (click)="openMenuDetail(menuItem.syncros_id)">
+          <p><b>ID: </b>{{menuItem.syncros_id}}</p>
+          <p><b>Estado: </b>{{menuItem.status}}</p>
+          <p><b>Tiempo Inicial: </b> {{menuItem.start_time | date: 'd/M/yy, h:mm:ssa':'GMT'}}</p>
+          <p><b>Tiempo Final: </b>{{menuItem.end_time | date: 'd/M/yy, h:mm:ssa':'GMT'}}</p>
+          <p><b>Tiempo Transcurrido: </b>{{menuItem.tt}}</p>
+          <p><b>Tipo de Ejecucion: </b>{{menuItem.mode}}</p>
+          @if (menuItem.percentage !== "100%") {
+          <p><b>Porcentaje: </b><p-progressBar [value]="menuItem.percentage.replace('%','')" /></p>
+          }
         </div>
       </div>
+    </div>
     }
   </div>
-  <p-paginator  [rows]="rows"
-                [totalRecords]="total_records" (onPageChange)="paginate($event)"></p-paginator>
+  <p-paginator [rows]="rows" [totalRecords]="total_records" (onPageChange)="paginate($event)"></p-paginator>
 </div>
