--- a/src/app/components/admin/canal-envio/canal-envio.component.html
+++ b/src/app/components/admin/canal-envio/canal-envio.component.html
@@ -2,26 +2,22 @@
 <div class="w-auto h-full p-5 bg-gray-100">
     <div class="w-auto h-[calc(100%-50px)] flex border-2 rounded-lg">
 
-
         <div class="w-full h-full border-r-2">
-
             <div class="border-b-2">
                 <h3 class="m-4 text-lg">Menus Seleccionados</h3>
             </div>
             <div class="w-full h-[calc(100%-110px)] overflow-auto">
-                @for (menusSeleccionado of menusSeleccionados; track menusSeleccionado) {
-                <div class="m-1">
-                    <mat-checkbox>
+                <mat-radio-group aria-label="Select an option" class="flex flex-col" (change)="radioChange($event)" [(ngModel)]="menuSeleccionado">
+                    @for (menusSeleccionado of menusSeleccionados; track menusSeleccionado) {
+                    <mat-radio-button class="m-1" [checked]="menusSeleccionado.checked" [value]="menusSeleccionado">
                         <div class="border border-gray-300 py-1 px-5 text-xs">
-                            <p>{{menusSeleccionado.sincrosId}} - {{menusSeleccionado.title}}</p>
+                            <p>{{menusSeleccionado.title}}</p>
                         </div>
-                    </mat-checkbox>
-                </div>
-                }
+                    </mat-radio-button>
+                    }
+                </mat-radio-group>
             </div>
         </div>
-
-
 
         <div class="w-full h-full border-r-2">
             <div class="border-b-2">
@@ -53,12 +49,15 @@
             }
         </div>
 
-
-
         <div class="w-full h-full border-r-2">
             <div class="border-b-2">
                 <h3 class="m-4 text-lg">Restaurantes</h3>
             </div>
+            @if (!showRestaurantes) {
+            <div class="w-full h-full flex justify-center items-center">
+                <div class="loader"></div>
+            </div>
+            } @else {
             <div class="m-1 border-b">
                 <mat-checkbox [checked]="allCompleteRestaurante" [indeterminate]="someCompleteRestaurantes()"
                     (change)="setAllRestaurantes($event.checked)">
@@ -76,8 +75,9 @@
                 </div>
                 }
             </div>
-        </div>
+            }
 
+        </div>
 
     </div>
     <button [disabled]="btnEnviarAhoraDisabled" class="mt-4" mat-flat-button color="primary"
