--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 @tailwind components;
 @tailwind utilities;
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; zoom: 105%;}
 /* HTML: <div class="loader"></div> */
 .loader {
   width: 50px;
