--- a/src/app/components/admin/sincronizacion-automatica/sincronizacion-automatica.component.html
+++ b/src/app/components/admin/sincronizacion-automatica/sincronizacion-automatica.component.html
@@ -5,27 +5,24 @@
     </div>
   } @else {
     <div class="w-full mx-2 flex flex-col">
-      <mat-checkbox [disabled]="checkSincronizarDisabled" [checked]="allCompleteAgregadores"
-                    (change)="setAllAgregadores($event.checked)">
+      <mat-checkbox [disabled]="checkSincronizarDisabled" [checked]="allCompleteAgregadores" (change)="setAllAgregadores($event.checked)">
         <h3 class="text-sm lg:text-2xl">{{listSelectableAgregadores.name}}</h3>
       </mat-checkbox>
       <p-calendar [required]="true" class="text-lg" [disabled]="false"
                   [(ngModel)]="listSelectableAgregadores.time" (change)="changeMainSync()"
                   (onClose)="changeMainSync()" [timeOnly]="true" />
     </div>
-
     <div class="w-full mx-2 flex flex-col">
       <h3 class="text-sm lg:text-2xl text-center">Sincronización Agregadores</h3>
       <div class="w-full">
         @for (aggregator of listSelectableAgregadores.children; track aggregator) {
           @if (aggregator) {
             <div class="w-full px-4 py-2 my-1 flex flex-col border-2 rounded-lg">
-              <mat-checkbox [disabled]="allCompleteAgregadores" [(ngModel)]="aggregator.select"
-                            (ngModelChange)="updateAllCompleteAgregadores()" class="-left-2">
+              <mat-checkbox  [(ngModel)]="aggregator.select" class="-left-2">
                 <h3 class="text-sm xl:text-2xl">{{aggregator.name}}</h3>
               </mat-checkbox>
 
-              <p-calendar [required]="true" class="text-lg" [disabled]="allCompleteAgregadores"
+              <p-calendar [required]="true" class="text-lg"
                           [(ngModel)]="aggregator.syncTime" [timeOnly]="true"
                           (change)="aggregator.syncTime = dateIsNotNull(aggregator.syncTime)" (onFocus)="onFocus(aggregator.select)"/>
             </div>
