--- a/src/app/components/admin/canal-envio/canal-envio.component.css
+++ b/src/app/components/admin/canal-envio/canal-envio.component.css
@@ -8,18 +8,11 @@
     outline: 1px solid rgba(0, 0, 0, 0.113);
 }
 
-
-:host ::ng-deep .mat-badge-content {
-    width: auto !important; 
-    height: auto !important;
-    min-width: 22px;
-    min-height: 22px;
-    aspect-ratio: 1/1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 2px;
+.badge {
+    background-color: #3f51b5;
+    color: white;
+    padding: 4px 8px;
+    text-align: center;
+    border-radius: 5px;
+    margin-left: 5px;
 }
-
- 
-  
